@@ -78,7 +78,7 @@ gen_reseller_menu($tpl, Config::get('RESELLER_TEMPLATE_PATH') . '/menu_users_man
 gen_logged_from($tpl);
 
 gen_page_message($tpl);
-// Get user id that come for manage domain
+// Get user id that comes for manage domain
 if (!isset($_GET['domain_id'])) {
 	header('Location: users.php');
 	die();
@@ -121,15 +121,15 @@ SQL_QUERY;
 	// Get admin data
 	$created_by = $_SESSION['user_id'];
 	$res1 = exec_query($sql,
-		"select admin_name from admin where admin_id=? and created_by=?",
+		"SELECT admin_name FROM admin WHERE admin_id = ? AND created_by = ?",
 		array($data['domain_admin_id'], $created_by));
 	$data1 = $res1->FetchRow();
 	if ($res1->RecordCount() <= 0) {
 		header('Location: users.php');
 		die();
 	}
-	// Get IP-info
-	$ipres = exec_query($sql, "select * from server_ips where ip_id=?", array($data['domain_ip_id']));
+	// Get IP info
+	$ipres = exec_query($sql, "SELECT * FROM server_ips WHERE ip_id = ?", array($data['domain_ip_id']));
 	$ipdat = $ipres->FetchRow();
 	// Get staus name
 	$dstatus = translate_dmn_status($data['domain_status']);
@@ -138,7 +138,8 @@ SQL_QUERY;
 	$fdofmnth = mktime(0, 0, 0, date("m"), 1, date("Y"));
 	$ldofmnth = mktime(1, 0, 0, date("m") + 1, 0, date("Y"));
 	$res7 = exec_query($sql,
-		"select IFNULL(sum(dtraff_web),0) as dtraff_web, IFNULL(sum(dtraff_ftp), 0) as dtraff_ftp, IFNULL(sum(dtraff_mail), 0) as dtraff_mail, IFNULL(sum(dtraff_pop),0) as dtraff_pop " . "from domain_traffic where domain_id=? and dtraff_time>? and dtraff_time<?",
+		"SELECT IFNULL(SUM(dtraff_web), 0) AS dtraff_web, IFNULL(SUM(dtraff_ftp), 0) AS dtraff_ftp, IFNULL(SUM(dtraff_mail), 0) AS dtraff_mail, IFNULL(SUM(dtraff_pop),0) AS dtraff_pop "
+		. "FROM domain_traffic WHERE domain_id = ? AND dtraff_time > ? AND dtraff_time < ?",
 		array($data['domain_id'], $fdofmnth, $ldofmnth));
 	$dtraff = $res7->FetchRow();
 
@@ -148,7 +149,7 @@ SQL_QUERY;
 	$month = date("m");
 	$year = date("Y");
 
-	$res8 = exec_query($sql, "select * from server_ips where ip_id=?", array($data['domain_ip_id']));
+	$res8 = exec_query($sql, "SELECT * FROM server_ips WHERE ip_id = ?", array($data['domain_ip_id']));
 	$ipdat = $res8->FetchRow();
 
 	$domain_traffic_limit = $data['domain_traffic_limit'];
@@ -187,40 +188,40 @@ SQL_QUERY;
 
 	list($disk_percent, $dindx, $b) = make_usage_vals($domdu, $domdl * 1024 * 1024);
 	// Get current mail count
-	$res6 = exec_query($sql, "SELECT COUNT(mail_id) AS mcnt FROM mail_users WHERE domain_id = ? AND mail_type NOT RLIKE '_catchall'", array($data['domain_id']));
+	$res6 = exec_query($sql, "SELECT COUNT(*) AS mcnt FROM mail_users WHERE domain_id = ? AND mail_type NOT RLIKE '_catchall'", array($data['domain_id']));
 	$dat3 = $res6->FetchRow();
 	$mail_limit = translate_limit_value($data['domain_mailacc_limit']);
 	// FTP stat
-	$res4 = exec_query($sql, "select gid from ftp_group where groupname=?", array($data['domain_name']));
+	$res4 = exec_query($sql, "SELECT gid FROM ftp_group WHERE groupname = ?", array($data['domain_name']));
 	$ftp_gnum = $res4->RowCount();
 	if ($ftp_gnum == 0) {
 		$used_ftp_acc = 0;
 	} else {
 		$dat1 = $res4->FetchRow();
-		$res5 = exec_query($sql, "select count(uid) as ftp_cnt from ftp_users where gid=?", array($dat1['gid']));
+		$res5 = exec_query($sql, "SELECT COUNT(*) AS ftp_cnt FROM ftp_users WHERE gid = ?", array($dat1['gid']));
 		$dat2 = $res5->FetchRow();
 
 		$used_ftp_acc = $dat2['ftp_cnt'];
 	}
 	$ftp_limit = translate_limit_value($data['domain_ftpacc_limit']);
 	// Get sql database count
-	$res = exec_query($sql, "select count(sqld_id) as dnum from sql_database where domain_id=?", array($data['domain_id']));
+	$res = exec_query($sql, "SELECT COUNT(*) AS dnum FROM sql_database WHERE domain_id = ?", array($data['domain_id']));
 	$dat5 = $res->FetchRow();
 	$sql_db = translate_limit_value($data['domain_sqld_limit']);
 	// Get sql users count
 	$res = exec_query($sql,
-		"select count(u.sqlu_id) as ucnt from sql_user u,sql_database d where u.sqld_id=d.sqld_id and d.domain_id=?",
+		"SELECT COUNT(u.sqlu_id) AS ucnt FROM sql_user u, sql_database d WHERE u.sqld_id = d.sqld_id AND d.domain_id = ?",
 		array($data['domain_id']));
 	$dat6 = $res->FetchRow();
 	$sql_users = translate_limit_value($data['domain_sqlu_limit']);
-	// Get sub domain
-	$res1 = exec_query($sql, "SELECT COUNT(subdomain_id) aASs sub_num FROM subdomain WHERE domain_id = ?", array($domain_id));
+	// Get subdomain
+	$res1 = exec_query($sql, "SELECT COUNT(*) AS sub_num FROM subdomain WHERE domain_id = ?", array($domain_id));
 	$sub_num_data = $res1->FetchRow();
-	$res1 = exec_query($sql, "SELECT COUNT(`subdomain_alias_id`) AS sub_num FROM `subdomain_alias` WHERE `alias_id` IN (SELECT `alias_id` FROM `domain_aliasses` WHERE `domain_id`=?)", array($domain_id));
+	$res1 = exec_query($sql, "SELECT COUNT(`subdomain_alias_id`) AS sub_num FROM `subdomain_alias` WHERE `alias_id` IN (SELECT `alias_id` FROM `domain_aliasses` WHERE `domain_id` = ?)", array($domain_id));
 	$alssub_num_data = $res1->FetchRow();
 	$sub_dom = translate_limit_value($data['domain_subd_limit']);
 	// Get domain aliases
-	$res1 = exec_query($sql, "select count(alias_id) as alias_num from domain_aliasses where domain_id=?", array($domain_id));
+	$res1 = exec_query($sql, "SELECT COUNT(*) AS alias_num FROM domain_aliasses WHERE domain_id = ?", array($domain_id));
 	$alias_num_data = $res1->FetchRow();
 
 	$dom_alias = translate_limit_value($data['domain_alias_limit']);
@@ -253,7 +254,7 @@ SQL_QUERY;
 			'VL_SQL_DB_ACCOUNTS_LIIT' => $sql_db,
 			'VL_SQL_USER_ACCOUNTS_USED' => $dat6['ucnt'],
 			'VL_SQL_USER_ACCOUNTS_LIIT' => $sql_users,
-			'VL_SUBDOM_ACCOUNTS_USED' => $sub_num_data['sub_num']+$alssub_num_data['sub_num'],
+			'VL_SUBDOM_ACCOUNTS_USED' => $sub_num_data['sub_num'] + $alssub_num_data['sub_num'],
 			'VL_SUBDOM_ACCOUNTS_LIIT' => $sub_dom,
 			'VL_DOMALIAS_ACCOUNTS_USED' => $alias_num_data['alias_num'],
 			'VL_DOMALIAS_ACCOUNTS_LIIT' => $dom_alias
