@@ -1,6 +1,10 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-03-22 Thomas Häber
+	- GUI:
+		* Fixed #1758: domain_details.php error.
+
 2009-03-18 Thomas Häber
 	- ENGINE:
 		* Fixed #1668: Add the LZMA compression to the possible backup zipping algorithms (currently only tested with debian lenny)
